# cloud-computing-ex3

./: README.md  query.sh  query.txt
.github/workflows/: assignment3.yml
meals-service/: Cargo.toml  Dockerfile  README.md
meals-service/src/: main.rs
meals-service/src/api/: dish.rs  meal.rs  mod.rs
meals-service/src/repository/: mod.rs  nutrition_api_client.rs  state.rs
tests/: assn3_tests.py  query.py
