[package]
name = "meals-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = {version = "^1", features = ["derive"]}
serde_json = "1"
futures = "0.3"
env_logger = "0.10.0"
log = "0.4.17"
strum_macros = "^0.24"
strum = {version = "^0.24", features = ["derive"]}
reqwest = {version = "0.11", features = ["json"]}